Exibe historico e baixa versoes dos anexos DFD
